# custom_vector_database

./: CMakeLists.txt  README.md  my_db.json
lib/hnsw/: CMakeLists.txt  hnsw.h
src/: main.cpp  test.cpp  vectordb.cpp  vectordb.h
